.happypack/s--1632186866
/Users/joneyphair/Code/kr-admin-new/src/Containers/Finance/Manage/OrderBill/OrderList/index.js: Missing class properties transform.
SyntaxError: /Users/joneyphair/Code/kr-admin-new/src/Containers/Finance/Manage/OrderBill/OrderList/index.js: Missing class properties transform.
[0m [90m 64 | [39m
 [90m 65 | [39m   [90m//导出[39m
[31m[1m>[22m[39m[90m 66 | [39m	onExport[33m=[39m(values)[33m=>[39m {
 [90m    | [39m	[31m[1m^[22m[39m
 [90m 67 | [39m		[36mvar[39m searchParams [33m=[39m [36mthis[39m[33m.[39mstate[33m.[39msearchParams[33m;[39m
 [90m 68 | [39m		let idList [33m=[39m [][33m;[39m
 [90m 69 | [39m		[36mif[39m (values[33m.[39mlength [33m!=[39m [35m0[39m) {[0m
    at File.buildCodeFrameError (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:407:15)
    at NodePath.buildCodeFrameError (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.1@babel-traverse/lib/path/index.js:140:26)
    at ClassTransformer.pushBody (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.0@babel-plugin-transform-es2015-classes/lib/vanilla.js:262:20)
    at ClassTransformer.buildBody (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.0@babel-plugin-transform-es2015-classes/lib/vanilla.js:229:10)
    at ClassTransformer.run (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.0@babel-plugin-transform-es2015-classes/lib/vanilla.js:143:10)
    at PluginPass.ClassExpression (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.0@babel-plugin-transform-es2015-classes/lib/index.js:48:60)
    at newFn (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.1@babel-traverse/lib/visitors.js:276:21)
    at NodePath._call (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.1@babel-traverse/lib/path/context.js:76:18)
    at NodePath.call (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.1@babel-traverse/lib/path/context.js:48:17)
    at NodePath.visit (/Users/joneyphair/Code/kr-admin-new/node_modules/.6.23.1@babel-traverse/lib/path/context.js:105:12)